--- a/projects/opening-the-box-model/assets/stylesheets/main.css
+++ b/projects/opening-the-box-model/assets/stylesheets/main.css
@@ -151,12 +151,37 @@ table {
     box-sizing: border-box;
 }
 
+.grid,
 .container {
     margin: 0 auto;
-    padding-left: 30px;
-    padding-right: 30px;
     width: 1060px;
     border: 1px solid black;
+}
+
+.container {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.col-1-3 {
+    width: 33%;
+}
+
+.col-2-3 {
+    width: 66.66%;
+}
+
+.col-1-3,
+.col-2-3 {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 
@@ -172,6 +197,45 @@ h4,
 h5,
 p {
     margin-bottom: 22px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    color: #648880;
+}
+
+h1 {
+    font-size: 36px;
+    line-height: 44px;
+}
+
+h2 {
+    font-size: 24px;
+    line-height: 44px;
+}
+
+h3 {
+    font-size: 21px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+h5 {
+    color: #a9b2b9;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+strong {
+    font-weight: 400;
+}
+
+cite.em {
+    font-style: italic;
 }
 
 
@@ -200,5 +264,110 @@ p {
 */
 
 .hero {
+    line-height: 44px;
     padding: 22px 80px 66px 80px;
+}
+
+.hero h2 {
+    font-size: 36px;
+}
+
+.hero p {
+    font-size: 24px;
+}
+
+.teaser a:hover h3 {
+    color: #a9b2b9;
+}
+
+
+/*
+  ========================================
+  Clearfix
+  ========================================
+*/
+
+.group:before,
+.group:after {
+    content: "";
+    display: table;
+}
+
+.group:after {
+    clear: both;
+}
+
+.group {
+    clear: both;
+    *zoom: 1;
+}
+
+
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo {
+    float: left;
+    border-top: 4px solid #648880;
+    padding: 40px 0 22px 0;
+    font-size: 48px;
+    line-height: 44px;
+}
+
+.tagline {
+    margin: 66px 0 22px 0;
+}
+
+.primary-nav {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+
+/*
+  ========================================
+  Primary footer
+  ========================================
+*/
+
+.primary-footer {
+    color: #648880;
+    font-size: 14px;
+    padding-bottom: 44px;
+    padding-top: 44px;
+}
+
+.primary-footer small {
+    float: left;
+    font-weight: 400;
+}
+
+
+/*
+  ========================================
+  Custom styles
+  ========================================
+*/
+
+body {
+    color: #888;
+    font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+/*
+  ========================================
+  Links
+  ========================================
+*/
+
+a:hover {
+    color: #a9b2b9;
+}
+
+a {
+    color: #648880;
 }
